oxiplate-derive/tests/broken/derive/absolute-path.stderr
error: Template path `/absolute` not within template directory `$DIR/templates`
 --> tests/broken/derive/absolute-path.rs:4:14
  |
4 | #[oxiplate = "/absolute"]
  |              ^^^^^^^^^^^
